arrumado posição do footer bugado, adicionado descrição padrão para herois sem descrição, arrumado card dos herois dando overflow no container no hover, arrumado input não clicável na direita, adicionado lupa como label para poder clicar nela e ter o input

--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,12 +1,11 @@
 .wrapper {
   color: white;
-  position: relative;
-}
-
-.footer {
   position: absolute;
-  text-align: center;
   bottom: 1rem;
   right: 0;
   left: 0;
+}
+
+.footer {
+  text-align: center;
 }
