--- a/src/Components/FormApi.module.css
+++ b/src/Components/FormApi.module.css
@@ -22,6 +22,13 @@
   font-size: inherit;
   padding: 0.5rem;
   color: #ddd;
+  width: 100%;
+}
+
+.divinput label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .input,
@@ -65,6 +72,7 @@
   padding: 1rem;
   width: 70vw;
   transition: 0.3s;
+  transform: scale(0.9);
 }
 
 .imgheroi {
@@ -79,7 +87,7 @@
 }
 
 .heroicard:hover {
-  transform: scale(1.1);
+  transform: scale(1);
 }
 
 .cardwrapper {
